# Synoptia-THERESE

./: .coverage 3  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts  prompts-bmad-therese-v2.md  pyproject.toml  test_validation_bug.py
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
assets/design/: .gitkeep
docs/: ALPHA-PACKAGING-FIXES.md  API.md  BACKLOG-ULTRAJURY-2026-03-25.md  CHANGELOG.md  CONTRIBUTING.md  DEVLOG.md  GETTING_STARTED.md  RAPPORT-TESTS-2026-01-26.md  README.md  ULTRAJURY-AUDIT-2026-03-12.md  UPDATER-SETUP.md  USER_GUIDE_ALPHA.md  USER_STORIES.md  VOICE-LOCAL.md  architecture.md  benchmark-cowork.md  benchmark-memoire.md  benchmark-ux.md  known-patterns.md  prd-therese.md  v3.md
docs/audit/: backlog-2026-06-09.md  history.json  ultrajury-2026-06-09.md  ultrajury-2026-07-16-backlog.md  ultrajury-2026-07-16.md
docs/audits/: 2026-06-18-audit-mail-calendar-quickwins.md
docs/code-review/: rapport-architecture.md  rapport-performance.md  rapport-qualite.md  rapport-securite.md  rapport-tests.md  synthese-code-review.md
docs/epics/: epic-1-infrastructure.md  epic-2-chat-core.md  epic-3-memoire.md  epic-4-fichiers.md  epic-5-ux-ui.md
docs/migration-v0.40/: ARCHITECTURE-CIBLE.md  AUDIT-FINAL-LOCAL.md  AUDIT-PARITE.md  AUDIT-UIUX-20260716.md  AUDIT-UIUX-FABLE-DETAIL-20260716.md  AUDIT-UIUX-SOL-DETAIL-20260716.md  BACKLOG-POST-BETA.md  BILAN-CAMPAGNES-PERSONAS-20260716.md  CAMPAGNE-10-PERSONAS-20260716.md  CHANGELOG-0.40-DRAFT.md  CONTRE-REVUE-20260715.md  COUVERTURE-FONCTIONNELLE.md  DECISIONS.md  PLAN-DE-MIGRATION.md  RAPPORT-RECETTE-PERSONAS-20260716.md  README.md  RECETTE-ET-RELEASE.md  RECETTE-VISUELLE-LUDO.md  SOCLE-TRANSVERSAL.md
docs/planning/: sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md
docs/plans/: 2026-03-27-katia-agents-design.md  2026-03-30-atelier-agents-locaux.md  2026-03-30-qa-pipeline.md  2026-04-30-charte-atelier-design.md  2026-05-04-charte-manuscrit-design.md  2026-07-07-atelier-documentaire-design.md  2026-07-07-atelier-documentaire-plan.md  2026-07-10-actions-deterministes-design.md  2026-07-10-chantiers-3-4-5-designs.md  2026-07-11-variables-v1-design.md
docs/releases/: v0.10.0-alpha.md  v0.10.2-alpha.md  v0.11.0-alpha.md  v0.11.3-alpha.md  v0.11.4-alpha.md  v0.11.5-alpha.md  v0.11.6-alpha.md  v0.11.7-alpha.md  v0.11.8-alpha.md  v0.12.0-alpha.md  v0.13.0-alpha.md  v0.13.1-alpha.md  v0.13.2-alpha.md  v0.2.10-alpha.md  v0.2.11-alpha.md  v0.2.13-alpha.md  v0.2.8-alpha.md  v0.2.9-alpha.md  v0.20.0-alpha.md  v0.20.0-prerelease.md  v0.21.0-alpha.md  v0.22.0-alpha.md  v0.23.0-alpha.md  v0.24.0-alpha.md  v0.24.1-alpha.md  v0.24.2-alpha.md  v0.24.3-alpha.md  v0.24.4-alpha.md  v0.24.5-alpha.md  v0.24.6-alpha.md  v0.25.0-alpha.md  v0.25.1-alpha.md  v0.26.0-alpha.md  v0.26.1-alpha.md  v0.26.2-alpha.md  v0.27.0-alpha.md  v0.28.0-alpha.md  v0.28.1-alpha.md  v0.28.2-alpha.md  v0.28.3-alpha.md  (+26 more)
docs/revue-produit/: 00-etat-des-lieux.md  01-pistes-priorisees.md  02-roadmap.md  B-rapport-implementation.md  B-test-script-syn.md  L6-decision-ux-panel.md  feature-inventory-and-global-persona.md  memoire-A-vs-B-arbitrage.md  personas-pass1-comptes-rendus.md  personas-pass1-synthese-plan.md  personas-pass2-comptes-rendus.md  personas-pass2-synthese-plan.md  personas-test.md  phase0-B-donnee-unifiee-spec.md  phase0-B-plan.md  phase1-navigation-spec.md  syn-2e-regard-navigateur.md  syn-2e-regard-tauri.md  syn-verification-brief.md
docs/rules/: INDEX.md  RULES-BACKEND.md  RULES-DESIGN.md  RULES-DEVOPS.md  RULES-DONNEES.md  RULES-FRONTEND.md  RULES-LLM.md  RULES-SECURITE.md  RULES-TESTS.md
docs/sessions/: FEATURES.md
docs/stories/: COVERAGE.md  E1-01-init-tauri-react.md  E1-02-setup-backend-python.md  E1-03-setup-sqlite.md  E1-04-setup-qdrant.md  E2-01-interface-chat.md  (+43 more)
playwright-report/: index.html
scripts/: build-sidecar.sh  bump-version.sh  check-app-version-sync.py
src/frontend/src-tauri/: Cargo.toml  Info.plist  installer-hooks.nsh  tauri.conf.json  tauri.linux.conf.json
src/frontend/src-tauri/capabilities/: default.json
src/frontend/src-tauri/icons/: icon.icns
src/frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
test-results/: .last-run.json
tests/: __init__.py  conftest.py  test_F11_recaps_lisibles.py  test_accents_messages.py  test_action_agents.py  test_agents_v040.py  test_alembic_stamp.py  test_auth_failclosed.py  test_backup_complete.py  test_backup_encryption.py  test_billing_profile_cache.py  test_board_v040.py  test_caldav_timeout.py  test_calendar_allday_semantics.py  test_chat_actions.py  test_chat_skill_file_stream.py  test_chat_tool_confirmation.py  test_chat_tool_loop.py  test_circuit_breaker_streaming.py  test_code_executor_sandbox.py  test_confirm_tool_endpoint.py  test_data_isolation.py  test_db_encryption.py  test_document_orchestrator.py  test_documents_draft_validate.py  test_documents_entities.py  test_documents_router.py  test_email_response_prompt.py  test_export_profile.py  test_health_db.py  test_image_generator_db.py  test_intent_explicit.py  test_invoice_currency_migration.py  test_main_startup.py  test_maintenance.py  test_markdown_docx.py  test_mcp_windows_command_resolution.py  test_memory_tools.py  test_migration_errors.py  test_module_devis.py  (+40 more)
(+759 files in other folders)
