[project]
name = "therese-backend"
version = "0.2.3"
description = "Backend THÉRÈSE v2 - L'assistante souveraine des entrepreneurs français"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ludo Sanchez", email = "ludo@synoptia.fr" }
]
keywords = ["ai", "assistant", "memory", "rag", "llm"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "alembic>=1.13.0",
    "httpx>=0.26.0",
    "anthropic>=0.18.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "python-magic>=0.4.27",
    "einops>=0.8.1",
    # Skills - génération Office
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2",
    # Image generation
    "openai>=1.12.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
    "cryptography>=46.0.3",
    # Phase 1 - Email & Calendar (Gmail/Google Calendar)
    "beautifulsoup4>=4.12.3",
    "google-auth>=2.32.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.142.0",
    # Phase 4 - Invoicing (PDF generation)
    "reportlab>=4.2.5",
    # Local First - Email IMAP/SMTP
    "imap-tools>=1.6.0",
    "aiosmtplib>=3.0.0",
    # Local First - Calendar CalDAV
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
    "pytz>=2024.1",
    "keyring>=25.7.0",
    "pyyaml>=6.0",
    # Security - Rate limiting (SEC-015)
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
e2e = [
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend/app"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/backend/alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # Longueur de ligne (géré au cas par cas)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.11.0,<7.0",
]
