[package]
name = "therese"
version = "0.7.2"
description = "THÉRÈSE v2 - L'assistante souveraine des entrepreneurs français"
authors = ["Ludo Sanchez <ludo@synoptia.fr>"]
license = "AGPL-3.0-only"
repository = "https://github.com/ludovicsanchez38-creator/Synoptia-THERESE"
edition = "2021"
rust-version = "1.77"

[lib]
name = "therese_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-mic-recorder = "2.0.0"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true
